--- a/components/components.module.scss
+++ b/components/components.module.scss
@@ -1,23 +1,11 @@
 .BigHeader {
-    font-size: 32px;
     position: relative;
-    margin-bottom: 60px;
+    margin-bottom: 24px;
+    font-size: inherit;
 }
 
-.BigHeaderDecorator1 {
-    position: absolute;
-    bottom: -18px;
-    left: 0;
-    width: 60px;
-    height: 4px;
-    background: linear-gradient(
-        to right,
-        var(--color-secondary),
-        var(--color-primary)
-    );
-    border-radius: 2px;
-}
-.BigHeaderDecorator2 {
+.BigHeaderContent {
+    font-size: 32px;
 }
 
 .viewLink {
@@ -43,3 +31,17 @@
 //     text-transform: uppercase;
 //     font-size: 14px;
 // }
+
+
+.separator {
+    background: linear-gradient(
+        to right,
+        var(--color-secondary),
+        var(--color-primary)
+    );
+    height: 4px;
+    width: 80px;
+    display: block;
+    border: none;
+    margin: 0.5em 0;
+}
