--- a/components/posts/PostSummary.module.scss
+++ b/components/posts/PostSummary.module.scss
@@ -7,11 +7,6 @@
     border-bottom: none;
 }
 
-.meta {
-    font-size: 12px;
-    color: #555;
-}
-
 .tags {
     margin-bottom: 12px;
 }
@@ -32,4 +27,8 @@
             font-size: 22px;
         }
     }
+}
+
+.separator {
+    margin-bottom: 18px;
 }
