--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -16,7 +16,6 @@
     top: 0;
     background: #fff;
     z-index: 1;
-    /* box-shadow: 0 5px 30px rgba(0, 0, 0, 0.05); */
 }
 
 .headerContainer {
@@ -32,7 +31,6 @@
 .headerNav {
     display: flex;
     align-items: center;
-    /* justify-content: flex-end; */
     flex: 1;
     transition: all 0.2s ease;
 
@@ -78,6 +76,10 @@
 .logo {
     padding: 12px 0;
     height: 72px;
+
+    @media screen and (max-width: 420px) {
+        height: 62px;
+    }
 }
 
 .main {
@@ -88,11 +90,19 @@
     min-height: 100%;
 }
 
+.hamburgerWrap {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex: 1;
+}
+
 .hamburger {
     border: none !important;
     outline: none;
     background-color: transparent;
     cursor: pointer;
+    float: right;
 
     @media screen and (min-width: 700px) {
         display: none;
