Format with prettier

--- a/components/posts/PostSummary.module.scss
+++ b/components/posts/PostSummary.module.scss
@@ -23,7 +23,12 @@
     margin-bottom: 12px;
 
     :global {
-        h1, h2, h3, h4, h5, h6 {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
             font-size: 22px;
         }
     }
