--- a/components/posts/PostContent.module.scss
+++ b/components/posts/PostContent.module.scss
@@ -83,7 +83,7 @@
         /* Code blocks */
         pre[class*="language-"] {
             color: #fff;
-            box-shadow: 0 5px 15px 0 rgba(#282A36, 0.6);
+            box-shadow: 0 5px 15px 0 rgba(#282a36, 0.6);
             padding: 1em;
             margin: 1.5em 0;
             overflow: auto;
