--- a/components/components.module.scss
+++ b/components/components.module.scss
@@ -9,34 +9,14 @@
 }
 
 .viewLink {
-    // display: inline-block;
-    // padding: 2px;
-    // background: linear-gradient(
-    //     to right,
-    //     var(--color-secondary),
-    //     var(--color-primary)
-    // );
-    // border-radius: 6px;
 }
 
-// .viewLinkContent {
-//     background: white;
-//     // background:
-//     //     linear-gradient(to right, var(--color-secondary-fade), var(--color-primary-fade)), linear-gradient(white, white),;
-//     display: inline-block;
-//     padding: 9px 24px;
-//     border-radius: 4px;
-//     color: var(--color-primary) !important;
-//     font-weight: 600;
-//     text-transform: uppercase;
-//     font-size: 14px;
-// }
 
 .separator {
     background: linear-gradient(
         to right,
-        var(--color-secondary),
-        var(--color-primary)
+        var(--blue9),
+        var(--crimson9)
     );
     height: 4px;
     width: 80px;
