--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -16,8 +16,7 @@
     --bg: var(--color-section);
     --fg: var(--color-section-contrast);
     border-bottom: 1px solid var(--color-border);
-    position: sticky;
-    top: 0;
+    // top: 0;
     background: var(--bg);
     color: var(--fg);
     z-index: 20;
@@ -73,25 +72,15 @@
     flex: 1;
     transition: all 0.2s ease;
 
-    @media screen and (max-width: 700px) {
-        pointer-events: none;
-        position: absolute;
-        opacity: 1;
-        opacity: 0;
-        background: var(--bg);
-        top: 80%;
-        left: 0;
-        padding-left: 8px;
-        right: 0;
-        z-index: 1;
+    @media screen and (max-width: 680px) {
+        margin-left: -16px;
         width: 100%;
-        border-bottom: 1px solid var(--color-border);
+        flex: 100%;
+        order: 10;
+        margin-top: -12px;
     }
 }
 
-.headerNavOpen {
-    opacity: 1;
-}
 
 .headerNavLink.headerNavLink {
     padding: 18px;
@@ -135,15 +124,21 @@
 
 .logoLink {
     display: block;
-    padding-right: 40px;
+    padding-right: 24px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+
+    @media screen and (max-width: 680px) {
+        flex-grow: 1;
+    }
 }
 
 .logo {
     padding: 12px 0;
-    height: 72px;
+    height: 40px;
 
     @media screen and (max-width: 420px) {
-        height: 62px;
+        height: 40px;
     }
 }
 
@@ -153,48 +148,4 @@
     padding: 24px;
     background: var(--bg);
     min-height: 100%;
-}
-
-.hamburgerWrap {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex: 1;
-
-    @media screen and (min-width: 700px) {
-        display: none;
-    }
-}
-
-.hamburger {
-    border: none !important;
-    outline: none;
-    background-color: transparent;
-    cursor: pointer;
-
-    &:focus-visible {
-        outline: var(--color-primary) auto 1px;
-        outline: -webkit-focus-ring-color auto 1px;
-    }
-}
-
-.hamburgerLine {
-    background-color: var(--color-text);
-    display: block;
-    margin: 5px 0;
-    height: 2px;
-    width: 30px;
-    transition: all 0.2s ease;
-}
-
-.hamburgerOpen .hamburgerLine:nth-child(1) {
-    transform: translateY(7px) rotate(45deg);
-}
-
-.hamburgerOpen .hamburgerLine:nth-child(2) {
-    opacity: 0;
-}
-
-.hamburgerOpen .hamburgerLine:nth-child(3) {
-    transform: translateY(-7px) rotate(-45deg);
 }
