--- a/components/posts/PostContent.module.scss
+++ b/components/posts/PostContent.module.scss
@@ -41,6 +41,82 @@
             margin: 8px 0;
         }
 
+        // Tables
+        table {
+            border-collapse: separate;
+            border-spacing: 0;
+            margin: 1.5em 0;
+            width: 100%;
+            border-radius: 0.3em;
+            box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.3);
+            background: var(--mauve-2);
+            overflow: hidden;
+            border: 1px solid var(--color-border, rgba(0, 0, 0, 0.1));
+        }
+
+        th,
+        td {
+            border-right: 1px solid var(--color-border, rgba(0, 0, 0, 0.1));
+            border-bottom: 1px solid var(--color-border, rgba(0, 0, 0, 0.1));
+            padding: 0.5em;
+        }
+
+        th:first-child,
+        td:first-child {
+            border-left: none;
+        }
+
+        th:last-child,
+        td:last-child {
+            border-right: none;
+        }
+
+        thead tr:first-child th:first-child {
+            border-top-left-radius: 0.3em;
+        }
+
+        thead tr:first-child th:last-child {
+            border-top-right-radius: 0.3em;
+        }
+
+        tbody tr:last-child td {
+            border-bottom: none;
+        }
+
+        tbody tr:last-child td:first-child {
+            border-bottom-left-radius: 0.3em;
+        }
+
+        tbody tr:last-child td:last-child {
+            border-bottom-right-radius: 0.3em;
+        }
+
+        // Handle case where table has no thead
+        tr:first-child td:first-child {
+            border-top-left-radius: 0.3em;
+        }
+
+        tr:first-child td:last-child {
+            border-top-right-radius: 0.3em;
+        }
+
+        tr:last-child td {
+            border-bottom: none;
+        }
+
+        tr:last-child td:first-child {
+            border-bottom-left-radius: 0.3em;
+        }
+
+        tr:last-child td:last-child {
+            border-bottom-right-radius: 0.3em;
+        }
+
+        th {
+            font-weight: 600;
+            text-align: left;
+        }
+
         // Separators
 
         hr {
